{{$NEXT}}

0.37     2015-02-26

- Fixed a test failure when MooseX::Params::Validate 0.21+ is
  installed. Reported by Slaven Rezic. RT #102382.


0.36     2014-08-15

- Trying to build an email with a header that started with a space caused the
  header value to be dropped entirely from the generated email. Patch by Greg
  Oschwald. PR #2.


0.35     2014-05-12

- Replaced all uses of File::Slurp with File::Slurp::Tiny. See RT #95479 for
  the initial bug report and discussion on why File::Slurp should not be used.


0.34     2014-05-02

- More test fixes - relax the date parsing more.


0.33     2014-04-19

- Fixed tests so they pass with the most recent DateTime::Format::Mail (0.400)
  as well as older versions.


0.32     2014-04-19

- Courriel parsing is now more liberal and will accept an email with mixed
  line endings (some newline, some CRLF, etc.). Apparently this happens in the
  wild (of course it does). Reported by Joseph Crotty. RT #94837.


0.31     2013-04-03

[MISC]

- Removed the "this is very alpha" warning from the docs. It's really not very
  alpha any more.


0.30     2012-08-20

[API CHANGES]

- Courriel::Builder no longer exports a bcc() subroutine. Creating Bcc headers
  in emails does not make any sense whatsoever. See
  https://metacpan.org/module/Email::Sender::Manual::QuickStart#Hey-wheres-my-Bcc-support-
  for an explanation of why there is no such thing as a Bcc header.


0.29     2012-03-07

[BUG FIXES]

- Courriel now allows an email to have an empty subject when parsing, as does
  Courriel::Builder. Based on a patch from Zbigniew Łukasiak.


0.28     2012-02-01

[BUG FIXES]

- Header attribute names need to be looked up case-insensitively, according to
  the spec. The original casing is preserved in the Courriel::HeaderAttribute
  object's name(), method, but looking up an attribute by name on a
  Courriel::Header object now accepts any casing for the name.


0.27     2011-09-24

[ENHANCEMENTS]
